--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 border-style: solid;
                 border-width: 1px;
                 width: 22vw;
-                height: 1.75vw;
+                height: 4vh;
                 border-radius: 40px;
 
                 background-image: url(/images/Magnifying-Glass.png);
@@ -50,6 +50,29 @@
                 text-decoration: underline;
             }
 
+            button {
+                padding: 5px 10px 5px 10px;
+                margin-top: 30px;
+                border: none;
+                opacity: 0.8;
+                width: 150px;
+                height: 40px;
+                font-size: 15;
+                border-radius: 3px;
+                filter: brightness(103%);
+                font-weight: 0;
+            }
+
+            #footer {
+                position: fixed; 
+                bottom: 0px;
+                padding-bottom: 10px;
+                padding-top: 10px; 
+                font-size: 14;
+                background-color: rgb(236, 232, 232);
+                opacity: 0.7;
+                width: 100vw;
+            }
 
         </style>
     </head>
@@ -71,6 +94,29 @@
                 <form action="">
                     <input class="center">
                 </form>
+                <div>
+                    <button type="button" class="center" style="display: inline-block; margin-left: 44vw;">
+                        Google Search
+                    </button>
+                    <button type="button" class="center" style="display: inline-block; margin-left: 9px;">
+                        I'm Feeling Lucky
+                    </button>
+                </div>
+                <div class="center" style="margin-left: 44.66%; margin-top: 30px; font-size: 11;">
+                    Find a COVID-19 vaccine near you at <a href="" style="font-size: 11; color: blue;">vaccines.gov</a>
+                </div>
+                <div>
+                    <ul id="footer">
+                        <li style="margin-left: 20px;"><a href="">Advertising</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">How Search works</a></li>
+                        <li style="margin-left: 31.5vw;"><img src="images/Leaf.png" alt="Leaf"></li>
+                        <li>Carbon neutral since 2007</li>
+                        <li style="margin-left: auto;"><a href="">Privacy</a></li>
+                        <li style="margin-right: -18px;"><a href="">Terms</a></li><li>
+                        <li style="margin-right: 20px;"><a href="">Settings</li>
+                    </ul>
+                </div>
             </div>
         </body>
     </main>
