--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             input {
                 border-style: solid;
                 border-width: 1px;
-                width: 22vw;
-                height: 4vh;
+                width: 600px;
+                height: 50px;
                 border-radius: 40px;
 
                 background-image: url(/images/Magnifying-Glass.png);
@@ -94,15 +94,15 @@
                 <form action="">
                     <input class="center">
                 </form>
-                <div>
-                    <button type="button" class="center" style="display: inline-block; margin-left: 44vw;">
+                <div class="center" style="width: 316px;">
+                    <button type="button">
                         Google Search
                     </button>
-                    <button type="button" class="center" style="display: inline-block; margin-left: 9px;">
+                    <button type="button" style="margin-left: 10px;">
                         I'm Feeling Lucky
                     </button>
                 </div>
-                <div class="center" style="margin-left: 44.66%; margin-top: 30px; font-size: 11;">
+                <div class="center" style="font-size: 11; width: 283px; margin-top: 20px;">
                     Find a COVID-19 vaccine near you at <a href="" style="font-size: 11; color: blue;">vaccines.gov</a>
                 </div>
                 <div>
@@ -110,10 +110,11 @@
                         <li style="margin-left: 20px;"><a href="">Advertising</a></li>
                         <li><a href="">Business</a></li>
                         <li><a href="">How Search works</a></li>
-                        <li style="margin-left: 31.5vw;"><img src="images/Leaf.png" alt="Leaf"></li>
-                        <li>Carbon neutral since 2007</li>
+                        <l style="margin-left: auto;"></l>
+                        <li style="margin-left: -100px; width: 5px;"><img src="images/Leaf.png" alt="Leaf"></li>
+                        <li style="margin-left: 0px;width: 200px;">Carbon neutral since 2007</li>
                         <li style="margin-left: auto;"><a href="">Privacy</a></li>
-                        <li style="margin-right: -18px;"><a href="">Terms</a></li><li>
+                        <li style="margin-right: -21px;"><a href="">Terms</a></li><li>
                         <li style="margin-right: 20px;"><a href="">Settings</li>
                     </ul>
                 </div>
